tests/integration/tests/check_commands/CHECK/three_strings/07-negative_match_third_string/sample.itest
; RUN: %cat "%S/filecheck.input" | (%FILECHECK_EXEC "%S/filecheck.check" 2>&1 || true) | %FILECHECK_TESTER_EXEC "%s" --match-full-lines

; CHECK: {{.*filecheck.check:3:10: error: CHECK: expected string not found in input$}}
; CHECK: {{^}}; CHECK: foo{{$}}
; CHECK: {{^}}         ^{{$}}
; CHECK: {{^<stdin>:.*:.*: note: scanning from here$}}
; CHECK: hello3
; CHECK: ^{{$}}
; CHECK: {{^<stdin>:.*:.*: note: possible intended match here$}}
; CHECK: hello3
; CHECK: ^
; CHECK-EMPTY:
